# sds-submaker

./: .gitignore  README.md  pyproject.toml
sds_submaker/: __init__.py  __main__.py  sds_submaker.py
